# cuda_voxelizer

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: autobuild.yml
cuda_voxelizer/: binvox_io.cpp  binvox_io.h  cuda_error_check.cuh  cuda_util.cpp  cuda_util.h  cuda_voxelizer.sln  cuda_voxelizer.vcxproj  cuda_voxelizer.vcxproj.filters  main.cpp  todo.txt  util.h  util_common.h  util_cuda.cpp  util_cuda.h  util_io.cpp  util_io.h  voxelize.cu  voxelize.cuh
msvc/: cuda_voxelizer.sln  cuda_voxelizer.vcxproj  cuda_voxelizer.vcxproj.filters  custom_includes.props
msvc/vs2013/: cuda_voxelizer.sln  cuda_voxelizer.vcxproj
msvc/vs2013/src/: voxelize.cu.deps
msvc/vs2013_deprecated/: cuda_voxelizer.vcxproj.filters
msvc/vs2015/: cuda_voxelizer.vcxproj  cuda_voxelizer.vcxproj.filters
msvc/vs2015_deprecated/: cuda_voxelizer.vcxproj
msvc/vs2017/: cuda_voxelizer.sln  cuda_voxelizer.vcxproj  cuda_voxelizer.vcxproj.filters  custom_includes.props
msvc/vs2017_deprecated/: cuda_voxelizer.vcxproj.filters
msvc/vs2019/: cuda_voxelizer.vcxproj  cuda_voxelizer.vcxproj.filters  custom_includes.props
msvc/vs2022/: cuda_voxelizer.vcxproj  cuda_voxelizer.vcxproj.filters
src/: bounding_box.cu  cpu_voxelizer.cpp  cpu_voxelizer.h  main.cpp  morton_LUTs.h  thrust_operations.cu  thrust_operations.cuh  timer.h  todo.txt  tribox_helper.h  util.cpp  util.h  util_common.h  util_cuda.cpp  util_cuda.h  util_io.cpp  util_io.h  voxelize.cu  voxelize.cuh  voxelize_solid.cu
src/lib/: helper_cuda.h
src/libs/: helper_cuda.h  helper_string.h
src/libs/cuda/: helper_cuda.h
src/libs/magicavoxel_file_writer/: VoxWriter.cpp  VoxWriter.h
test_models/: credit.txt  mechanical.STL
